# CMakeList.txt : CMake project for algo-eratosfenFilter, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("algo-eratosfenFilter")

# Add source to this project's executable.
add_executable (algo-eratosfenFilter "algo-eratosfenFilter.cpp" "algo-eratosfenFilter.h")

# TODO: Add tests and install targets if needed.
